--- a/_posts/major/algorithm/2020-06-13-25-huffman.md
+++ b/_posts/major/algorithm/2020-06-13-25-huffman.md
@@ -388,3 +388,135 @@ class Run implements Comparable<Run> {
 }
 ```
 
+
+
+### 9. 제 5단계 : 인코딩하기
+
+* 압축파일의 맨 앞부분(header)에 파일을 구성하는 run들에 대한 정보를 기록한다. 
+* 이때 원본 파일의 길이도 함께 기록한다 (왜 필요할까?)
+* 디코딩 할때 남는 길이를 위해 padding으로 넣은 비트들을 알기 위해서 원본 파일 길이도 함께 기록
+
+![]({{site.url}}/assets/images/algo226.PNG)
+
+![]({{site.url}}/assets/images/algo227.PNG)
+
+![]({{site.url}}/assets/images/algo228.PNG)
+
+![]({{site.url}}/assets/images/algo229.PNG)
+
+
+
+```java
+private void encode(RandomAccessFile fIn, RandomAccessFile fOut) {
+    while there remains bytes to read in the file {
+        recognise a run;
+        find the codeword for the run;
+        pack the codeword into the buffer;
+        if the buffer becomes full
+            write the buffer into the compressed file;
+    }
+    if buffer is not empty {
+        append 0s into the buffer;
+        write the buffer into the compressed file;
+    }
+}
+
+public class HuffmanEncoder {
+    static public void main (String args[]) {
+        String fileName = "";
+        HuffmanCoding app = new HuffmanCoding();
+        RandomAccessFile fIn;
+        Scanner kb = new Scanner(System.in);
+        
+        try {
+            System.out.print("Enter a file name: ");
+            fileName = kb.next();
+            fIn = new RandomAccessFile(fileName,"r");
+            app.compressFile(fileName,fIn);
+            fIn.close();
+        } catch (IOException io) {
+            System.err.println("Cannot open " + fileName);
+        }
+    }
+}
+```
+
+
+
+### 10. 제 6단계 : 디코딩하기
+
+```java
+public class HuffmanDecoder {
+    static public void main (String args[]) {
+        String fileName = "";
+        HuffmanCoding app = new HuffmanCoding();
+        RandomAccessFile fIn;
+        Scanner kb = new Scanner(System.in);
+        
+        try {
+            System.out.print("Enter a file name: ");
+            fileName = kb.next();
+            fIn = new RandomAccessFile(fileName,"r");
+            app.decompressFile(fileName,fIn);
+            fIn.close();
+        } catch (IOException io) {
+            System.err.println("Cannot open " + fileName);
+        }
+    }
+    
+    public void decompressFile(String inFileName, RandomAccessFile fIn)
+        throws IOException {
+        String outFileName = new String(inFileName+".dec");
+        RandomAccessFile fOut = new
+        RandomAccessFile(outFileName,"rw");
+        inputFrequencies(fIn);
+        createHuffmanTree();
+        assignCodewords(theRoot,0,0);
+        decode(fIn,fOut);
+    }
+    
+    private void inputFrequencies(RandomAccessFile fIn) throws IOException {
+        int dataIndex = fIn.readInt();
+        sizeOriginalFile = fIn.readLong();
+        //이 메서드가 속한 class HuffmanCoding에 long타입의 변수 sizeOriginalFile을 멤버로 추가한다. 이것은 원본 파일의 길이다. 이 값은 decode메서드에서 사용된다.
+        runs.ensureCapacity(dataIndex);
+        
+        for (int j = 0; j < dataIndex; j++) {
+            Run r = new Run();
+            r.symbol = (byte) fIn.read();
+            r.runLen = fIn.readInt();
+            r.freq = fIn.readInt();
+            runs.add(r);
+        }
+    }
+    
+    private void decode(RandomAccessFile fIn, RandomAccessFile fOut) throws IOException {
+        int nbrBytesRead=0, j, ch, bitCnt = 1, mask = 1, bits = 8;
+        mask <<= bits - 1; // change 00000001 to 100000000
+        
+        for (ch=fIn.read(); ch!=-1 && nbrBytesRead<sizeOriginalFile;) {
+            Run p = theRoot;
+            
+            while(true) {
+                if (p.left == null && p.right == null) {
+                    for (j = 0; j < p.runLen; j++)
+                        fOut.write(p.symbol);
+                    nbrBytesRead += p.runLen;
+                    break;
+                }
+                else if ((ch & mask) == 0) /* if the most significant bit is 0 */
+                    p = p.left;
+                else /* if the most significant bit is 1 */
+                    p = p.right;
+                if (bitCnt++ == bits) { /* if done with the current byte */
+                    ch = fIn.read();
+                    bitCnt = 1;
+                }
+                else
+                    ch <<= 1; /* left-shift the current byte */
+            }
+        }
+    }
+}
+```
+
