--- a/_posts/major/network/2020-06-12-network-02.md
+++ b/_posts/major/network/2020-06-12-network-02.md
@@ -1,6 +1,6 @@
 ---
 title:  "응용계층"
-excerpt: "클라이언트/서버, 소켓 통신"
+excerpt: "응용계층"
 classes: wide
 categories:
   - 네트워크
@@ -97,24 +97,151 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
 
 ### 6. 세션 계층의 서비스
 
-* FTP (File Transfer Protocol)
-  * 원격 host에 있는 파일을 가져오거나 host에 보내기 위한 프로토콜
-  * 가정 1: 클라이언트 사용자는 서버의 파일을 읽을 수 있는 권한의 계정이 있다.
-  * 가정 2: 계정이 없는 경우도 접근 가능하다.
-  * 세션 로그인과 종료가 존재
-  * 로그인을 통하여 권한 획득
-  * 로그인 정보를 서버가 관리
-  * Stateful Protocol : 즉, 세션 계층에서 하는 일이 많다는 의미
-  * 반대로 http는 세션 관리를 응용계층에서 함. 세션 계층에서 하는 일이 적다. 단순하다는 이야기
-  * 그래서 응용 계층에서 해야할일이 많아지므로 확장성이 커짐. 개발자가 할일이 많아짐
-  * 다시 반대로 얘기하면 ftp는 확장성이 적음. 사용자가 원하는 방향으로 개발하기가 힘듬
-  * 그래서 많은 응용 계층들이 http를 사용하는 이유임
+#### 6.1 FTP (File Transfer Protocol)
+
+* 원격 host에 있는 파일을 가져오거나 host에 보내기 위한 프로토콜
+* TCP / IP 프로토콜을 가짐
+* 가정 1: 클라이언트 사용자는 서버의 파일을 읽을 수 있는 권한의 계정이 있다.
+* 가정 2: 계정이 없는 경우도 접근 가능하다.
+* 세션 로그인과 종료가 존재
+* 로그인을 통하여 권한 획득
+* 로그인 정보를 서버가 관리
+* Stateful Protocol : 즉, 세션 계층에서 하는 일이 많다는 의미
+* 반대로 http는 세션 관리를 응용계층에서 함. 세션 계층에서 하는 일이 적다. 단순하다는 이야기
+* 그래서 응용 계층에서 해야할일이 많아지므로 확장성이 커짐. 개발자가 할일이 많아짐
+* 다시 반대로 얘기하면 ftp는 확장성이 적음. 사용자가 원하는 방향으로 개발하기가 힘듬
+* 그래서 많은 응용 계층들이 http를 사용하는 이유임
+
+#### 6.2 HTTP
+
+![]({{site.url}}/assets/images/net06.PNG)
+
+* TCP / UDP 프로토콜을 가짐
+
+* 세션 계층 (WWW) 프로토콜
+* HTML을 기본 프로젠테이션 계층으로 사용
+* 목적 : 전 서계 인터넷에 있는 정보를 탐색
+* 발명 : Tim 버너스-lee가 CERN에서 1980년말 ~ 1990년 초 연구해서 개발
+* 동작 : Web 자료를 가져와서(get) 보여주기. web에 자료를 posting하기
+* 보통 80번 port를 사용
+* 하나의 요청와 응답을 http transaction이라고 부름.
+* 즉, 각 http transaction에 대해서 서로 상관이 없음. state를 저장하지 않기 때문에
+* stateless protocol 이다 : 세션을 관리 안하기 때문에
+* 단순하고 자유도가 높다보니 ftp를 밀어내고 주요 프로토콜로 성장함
+
+* URL (Universal Resoucre Locator)
+  * http://naver.com/cafe/
+  * http : 프로토콜 이름. 물론 ftp를 지원한다면 웹 브라우저로 ftp 프로토콜 사용 가능
+  * //naver.com : 호스트 이름. 물론 여기에 ip주소를 써도 된다.
+  * /cafe/ : 호스트 아래 있는 리소스 주소. directory or file (자원들)
+  * URI는 URL보다 작은 개념으로 동적으로 찾으려는 자원을 말함.
+  * URI 차이는 자세히 포스팅 해둠
+
+##### 6.1 GET 요청
+
+* 원하는 자원을 가져오는 요청
+* 요청, 응답 형식. 응답은 post와 동일
+
+```http
+GET /서버상의 자원의 위치/ HTTP/1.1(버전)
+host(매개변수 1): formal.kw.ac.kr
+User-agent매개변수 2: Media/5.0
+***
+
+// 헤더의 끝에 한줄을 띄우면 Get 요청이 끝난다는 것을 의미
+```
+
+```http
+HTTP/1.1 200 OK
+last_modifited : 날짜
+Content-length : 487 // 응답코드의 전체 길이. 여기까지 헤더를 의미
+	// 한줄 띄기 헤더와 몸통 분리 의미
+    // 여기서부터 body(몸통) 실제 요청한 자원
+```
 
 
 
+#### 6.2 POST 요청
+
+* 자원을 서버에 게시하고 싶을 때
+* 요청 형식
+
+```http
+POST /서버상의 자원의 위치/ HTTP/1.1(버전)
+host(매개변수 1): formal.kw.ac.kr
+User-agent매개변수 2: Media/5.0
+	// 한줄 띄기. 몸통과 분리
+    // posting할 내용 적기
+```
 
 
 
+### 7. Cookie
+
+* http는 각 요청마다 상관이 없는 stateless다.
+* 근데 우리가 사용하는 웹서비스는 그렇지 않다. ex) 다른 게시글을 이동해도 계속해서 로그인 유지
+
+* 웹 응용의 구조
+* 서버 응용이 클라이언트의 이전 작업정보(state)를 파악하기 위한 도구
+* 프로토콜 : http Response 헤더의 set-cookie라는 필드. http request 헤더의 Cookie라는 필드
+
+* 기억해야할 사항을 쿠키에 담아 클라이언트가 기억하도록 하고 서버는 클라이언트의 방문시 주는 쿠키 정보의 맞추어 반응.
+* 클라이언트의 권한이 너무 크고 정보를 너무 많이 주게 됨. 해킹의 문제 원인
+* 해결책 : 세션. 
+
+#### 7.1 세션
+
+* 클라이언트의 고유 세션 ID를 제공. 클라이언트는 요청 시 서버에게 받은 고유 세션 ID만을 서버에게 전달.
+
+* 따라서 클라이언트 정보를 서버가 가지고 있음
+
+
+
+### 8. HTTP
+
+* 지금 까지는 HTTP의 작동 방식을 배움
+* 지금부터는 성능의 발전을 공부해보자.
+
+
+
+#### 8.1 HTTP transaction의 성능 향상
+
+* 지속적인 http transaction이 일어나면 http 연결과 종료가 너무 빈번히 일어난다.
+  * Persistent HTTP : 반복되는 http 연결과 종료를 한 번만 일어나도록 개선
+* 요청 자체로도 시간이 오래 걸린다.
+  * Pipelined HTTP
+
+
+
+#### 8.2 성능 향상 예시
+
+* 현재 http 작동 방식이 기본이면서 아래 조건이라고 가정하자
+
+* 지연 시간 : 패킷을 보내기 시작한 시점에서 패킷을 받기 시작한 시점까지 걸리는 전송 지연 시간
+* 전송률 : 단위시간당(초) 전송되는 데이터의 양
+
+ex1) 끝단간 지연시간이 100ms이고 전송률이 100MB/s인 네트워크에서 1MB를 전송하여 수신을 완료하는데 걸리는 시간은?
+
+* 전송 받고자하는 정보
+* HTTP 헤더
+* TCP 연결 / 종료 시간
+
+ex 2) 지연시간은 100ms 전송률 100KB/s, HTML 페이지 문서 1KB, 이미지 저장크기 10KB(이미지는 총 3개 가져옴), HTTP헤더 Req, Res 각각 1KB, TCP 연결 400ms, TCP 종료 200ms라고 가정. 
+
+* 최초 HTML 페이지만 주고 받았을 때 정보 수신완료 시간 630ms. 전체 완료는 830ms.
+
+* 이미지는 HTML 문서(1KB)보다 10배이므로 100ms가 됨. 그래서 이미지 수신은 720ms. 전체완료는 920ms
+* 근데 이미지가 3개라고 했으니 최종 920ms * 3 + 830ms = 3590s가 된다.
+
+##### 8.2.1 persistent http
+
+* 위의 상황에서 성능을 향상 시켜보자
+
+* 3590ms - 3 * 600ms(TCP 연결과 종료 시간을 합친것) = 1790ms
+
+##### 8.2.2 Pipeline Http
+
+* 각자 해보자..
 
 
 
