--- a/_posts/major/network/2020-06-12-network-02.md
+++ b/_posts/major/network/2020-06-12-network-02.md
@@ -204,7 +204,9 @@ User-agent매개변수 2: Media/5.0
 
 
 
-#### 8.1 HTTP transaction의 성능 향상
+#### 8.1 성능 향상 (다 중HTTP transaction)
+
+![]({{site.url}}/assets/images/net07.PNG)
 
 * 지속적인 http transaction이 일어나면 http 연결과 종료가 너무 빈번히 일어난다.
   * Persistent HTTP : 반복되는 http 연결과 종료를 한 번만 일어나도록 개선
@@ -213,7 +215,7 @@ User-agent매개변수 2: Media/5.0
 
 
 
-#### 8.2 성능 향상 예시
+##### 8.1.1 성능 향상 예시
 
 * 현재 http 작동 방식이 기본이면서 아래 조건이라고 가정하자
 
@@ -233,15 +235,86 @@ ex 2) 지연시간은 100ms 전송률 100KB/s, HTML 페이지 문서 1KB, 이미
 * 이미지는 HTML 문서(1KB)보다 10배이므로 100ms가 됨. 그래서 이미지 수신은 720ms. 전체완료는 920ms
 * 근데 이미지가 3개라고 했으니 최종 920ms * 3 + 830ms = 3590s가 된다.
 
-##### 8.2.1 persistent http
+##### 8.1.2 persistent http
+
+![]({{site.url}}/assets/images/net08.PNG)
 
 * 위의 상황에서 성능을 향상 시켜보자
 
 * 3590ms - 3 * 600ms(TCP 연결과 종료 시간을 합친것) = 1790ms
 
-##### 8.2.2 Pipeline Http
+##### 8.1.3 Pipeline Http
 
 * 각자 해보자..
 
 
 
+#### 8.2 성능향상 2 (네트워크 구조)
+
+![]({{site.url}}/assets/images/net09.PNG)
+
+##### 8.2.1 Web Cache  (Proxy Server) : 
+
+* ISP에서 비용 절감을 위하여 이전에 가져온적이 있는 문서를 DB에 임시 저장해 두었다가 동일 문서가 다시 요청될 때 재사용
+* 자기가 가지고 있는 내용이라고 해도 서버에 안가는 것은 아니다. 단지 HTTP 요청크기(내용)가 줄어듬.
+* 단지 내용이 서버에서 바뀌었냐 아니냐 물어보기 때문에 빨라짐.
+* 서버이자 클라이언트. 중개상인의 개념
+* 요청에 대한 응답시간 단축. 제공하는 교통량 증가(적은 서버로 더 많은 사용자 수용)
+
+
+
+### 9. DNS (Domain Name System)
+
+* 인터넷에서의 ID 체계 : IPv4, IPv6
+* 그러나 이것은 너무 많은 숫자로 이루어져 외우기 힘들다.
+* 그래서 인간이 외우기 쉽게 만든 시스템이 DNS
+* 응용계층(인터넷 5계층에서)에서만 관여
+* aliasing 관리
+
+#### 9.1 계층
+
+1. 최상위 : Root Name Service
+
+* Top-level domain name server (TLDNS) 관리
+* Top-level domain : .kr, .com , .edu, .net 같은 것들을 말함
+
+* 맨 처음 Top-level domain server의 ip와 유효기간을 반환
+* 그 후에는 유효기간 안에는 top level domain 서버 ip 요청 X
+
+2. Authorized DNS (ADNS)
+
+* TLDNS 아래 있는 계층
+
+* .kr DNS, .net DNS, .com DNS 이렇게 같은 top level domain을 들로 이루어져 있음
+* 여기서부터 캐쉬를 가지고 있음
+
+3. Local DNS (LDNS)
+
+* Authorized DNS 계층 아래 있음
+
+* 사용자가 처음 Domain을 물어보는 시스템
+
+
+
+##### 9.1.1 Recursive Domain Name Resolvation
+
+* 사용자가 요청한 도메인이 LDNS에 없을 경우 바로 ROOT DNS 계층에 물어봄.
+* 거기에 없으면 TLDNS에 물어봄.
+* 다시 또 없음 LDNS에 물어봄.
+
+* 그 이후로 같은 DNS에 물어보게 되면 바로 요청한 도메인이 있는 LDNS에 요청. 이를 Interactive라고 함
+
+
+
+### 10. P2P
+
+* 서버없이 Peer들끼리 직접 상호간 서비스를 제공하는 시스템(물물교환)
+* 서비스가 보장이 안된다. 그래서 신뢰성이 없음
+* 조각들의 쏠림 현상
+* Peer 들은 IP를 바꾸며 옮겨 다닐 수 있다.
+
+#### 10.1 Hybrid System
+
+* 서비스마다 정보는 서버가 관리
+* 실제 서비스는 peer끼리
+* ex) Skype, 스타크래프트, 토렌트
