--- a/_posts/book/git/2020-06-17-progit-32.md
+++ b/_posts/book/git/2020-06-17-progit-32.md
@@ -298,3 +298,6 @@ Would remove the following items:
 What now>
 ```
 
+*  작업하던 저장소가 완전 지저분해져서 Git에게 진짜로 강제로 정리하도록 해야 하는 경우가 생길 수 있다. 
+* 예를 들어 Git 버전관리 데이터가 포함된 디렉토리를 복사해왔거나 서브모듈 디렉토리에 문제가 생겼거나 하는 경우 `git clean -fd` 옵션으로 실행한 명령이라도 디렉토리 삭제가 되지 않는 경우가 있다. 
+* 이런 경우에는 `-f` 옵션을 한번 더 사용하여 강제성을 추가로 주어야 한다.
