--- a/_posts/book/git/2020-06-23-progit-38.md
+++ b/_posts/book/git/2020-06-23-progit-38.md
@@ -15,7 +15,7 @@ last_modified_at: 2020-06-23
 
 
 
-### 1. Merge 충돌
+### 1. Rerere
 
 * `git rerere` 기능은 약간 숨겨진 기능이다. 
 * “reuse recorded resolution” 이라고 해서 기록한 해결책 재사용하기란 뜻의 이름이고 이름 그대로 동작한다. 
