--- a/_posts/major/network/2020-06-18-network-03.md
+++ b/_posts/major/network/2020-06-18-network-03.md
@@ -21,8 +21,6 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
 
 * Relaiable Networking (End to End)
 
-![]({{site.url}}/assets/images/net04.PNG)
-
 * 네트워크의 이상적인 모습은 A에서 B로 direct하게 bit stream 형태로 가는 것이다.
 * 그러나 현실은 그렇지 않다.
 * 무한한 흐름 X, 패킷 유실, 패킷 순서 바뀜, 패킷 변조가 생긴다.
@@ -93,21 +91,72 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
 
 
 
+### 2. TCP vs UDP
+
+|          |          TCP           |                  UDP                   |
+| :------: | :--------------------: | :------------------------------------: |
+|  신뢰성  | 내용 유실 X, 순서 보장 |              내용 유실 O               |
+|   속도   |   고의적 지연이 존재   |           고의적 지연이 없음           |
+| 전송단위 |      바이트(Byte)      | 패킷(데이터 그램), Send 함수 호출 단위 |
+
+* TCP의 고의적 지연이 있는 이유는 혼잡 제어를 하기 때문이다. 혼잡 제어를 하는 이유는 TCP는 패킷 수신 순서가 중요하기 때문에 이미 받은 패킷이라고 해도 순서가 맞지 않는 다면 받지 않았다고 알려준다. 따라서 서버는 패킷에 대한 순서를 지향한다. 이를 무시하고 계속해서 데이터를 보내면 네트워크 코어에서 패킷이 쌓여서 과부하가 걸려 일부 패킷을 버리게 된다. 그러면 신뢰성이 깨진다.
+* TCP의 전송단위가 바이트인 이유는 패킷이 유실되지 않기 때문에 굳이 보낼 데이터를 따로 데이터를 전송 단위화 시킬 이유가 없다.
 
 
 
+#### 2.1 TCP
+
+* Reliable Network
+* 내용 변조 감지 (checksum)
+* 혼잡제어
+* 흐름제어 : 데이터 쏠림 현상 제어
+* 포트(응용계층의 프로그램들을 구분) 개념 지원
 
 
 
+### 3. 소켓 vs 포트
+
+![]({{site.url}}/assets/images/net10.PNG)
+
+* 여러개의 소켓에 한 개의 포트가 붙어 있는 형태이다. (N-1 형태)
 
 
 
+### 4. TCP 헤더
+
+* 32bit로 구성
+* sorce 포트 + destination 포트
+* 시퀀스 number (byte)
+* ACK number (byte)
+
+* 헤더 길이 정보 + 플래그 정보(ex: TCP 패킷 연결 플래그) + receive window(수신에 대한 버퍼 크기)
+
+* checksum (내용 변조 감지를 위한 헤더. payload를 역으로 보내서 수신측에서 payload와 checksum을 더해 모두 1이면 변조가 안된 것으로 간주. 예를들어 payload가 1001이면 checksum은 0110이라고 보냄.)
+* payload (패킷에 실제 의미 있는 데이터 내용. body라고도 함)
 
 
 
+### 5. 혼잡제어
 
+* 혼잡 인지
+  * 패킷 유실 -> 혼잡상황 -> 패킷전송률 저하. 
+  * 패킷전송 원활 -> 비혼잡 상황 -> 패킷 전송률 상승
+* AIMD(Additive Increase Multiplicative Decrease) : 위와 같은 상황을 판단하는 것을 말함
 
+* 패킷 유실 판단 : ACK 신호가 timeout 안에 오지 않음
+  * 타임 아웃은 너무 길면 재전송 신호가 너무 길어짐. 반대로 flase 알람 가능성
+  * RTO (Retransmission Timeout) = MAX(RTT + 4 * RTT 표준편차 , 1초)
+  * RTT (Round Trip Time) : 요청해서 응답까지 오는 시간, weighted moving average를 이용해서 구함
 
+* Fast Recovery(or Retransmission) : 1,2,3,4,5를 보내는대 수신측에서 2번 패킷을 못 받았다고 하자. 3번, 4번, 5번을 받고 나서 ACK를 보낼 때 3,4 ,5패킷에 대한 ACK가 아닌 1번 ACK를 연속해서 보내면 송신측에서 2번 패킷이 유실되었다고 생각하고 다시 2번부터 보낸다
 
+* Slow Start : 네트워크 이상 시 CW(connection window)를 1로 바꾼다. 문제는 cw 증가가 너무 느림.
+  * CW를 패킷이라고 보면 됨
+  * 패킷이 타임아웃이 안나면 CW를 1나씩 더 증가시켜 보냄. 그러나 문제는 선형적을 증가하므로 느림
+  * 따라서 어느 일정 구간까지는 기하급수적으로 속도를 늘게 하기 위해서 사용
+  * 예를 들어 1개가 성공하면 2개 보내고 2개가 성공하면 4개 보내고 4개 성공하면 8개 보낸다.
+  * 그러면 중간에 너무 증가해서 속도가 느려지면 다시 1로 감소시킨다.
+  * 그러면 아래 그림처럼 그래프가 바뀜
 
+![]({{site.url}}/assets/images/net11.PNG)
 
