네트워즈 코드워즈

--- a/_posts/major/network/2020-06-25-network-04.md
+++ b/_posts/major/network/2020-06-25-network-04.md
@@ -102,23 +102,44 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
 
 
 
+#### 1.3 IP 할당
+
+##### 1.3.1 서버 할당
+
+* ISP or 기관에서 Subnet 영역 할당
+
+* ICANN (Internet corporative for Assigned Names Numbers) : 국제 인터넷 주소 관리기구
+
+  * 서버 운영시 state IP를 ISP or 기관에 요청하여 할당받음
+
+  * 기계에 수동 입력
+
+##### 1.3.2 서버가 아닌 경우 할당
+
+* DHCP (Dynamic Host Config Protocol)
+
+* 호스트(서버)에서 보유하고 있는 IP를 유동적으로 관리하는 프로토콜
+* 즉, 자동할당 과 분배
+
+* DHCP 서버가 남는 IP 중 하나를 골라서 응답
+* 집에 공유기가 바로 그 역할
 
 
 
+##### 1.3.3 NAT (Network Address Translation)
+
+* IP 패킷의 TCP/UDP 포트 숫자와 소스 및 목적지의 IP 주소 등을 재기록하면서 라우터를 통해 네트워크 트래픽을 주고 받는 기술
+
+* 패킷에 변화가 생기기 때문에 IP나 TCP/UDP의 체크섬(checksum)도 다시 계산되어 재기록
+* NAT를 이용하는 이유는 대개 사설 네트워크에 속한 여러 개의 호스트가 하나의 공인 IP 주소를 사용하여 인터넷에 접속하기 위함
+* 즉 내부 망에서는 사설 IP 주소를 사용하여 통신을 하고, 외부망과의 통신시에는 NAT를 거쳐 공인 IP 주소로 자동 변환
+
+* 그러나 이것은 port 개수의 한계로 IP할당이 제한 되어 있다.
+* 그래서 port를 재사용하기 위한 endpoint-dependent mapping table이 있음. 이것은 port를 재사용
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+##### 1.3 NAT에서의 P2P 지원
 
 
 
