--- a/_posts/major/network/2020-06-25-network-04.md
+++ b/_posts/major/network/2020-06-25-network-04.md
@@ -128,6 +128,8 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
 
 ##### 1.3.3 NAT (Network Address Translation)
 
+![]({{site.url}}/assets/images/net14.PNG)
+
 * IP 패킷의 TCP/UDP 포트 숫자와 소스 및 목적지의 IP 주소 등을 재기록하면서 라우터를 통해 네트워크 트래픽을 주고 받는 기술
 
 * 패킷에 변화가 생기기 때문에 IP나 TCP/UDP의 체크섬(checksum)도 다시 계산되어 재기록
@@ -135,19 +137,34 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
 * 즉 내부 망에서는 사설 IP 주소를 사용하여 통신을 하고, 외부망과의 통신시에는 NAT를 거쳐 공인 IP 주소로 자동 변환
 
 * 그러나 이것은 port 개수의 한계로 IP할당이 제한 되어 있다.
-* 그래서 port를 재사용하기 위한 endpoint-dependent mapping table이 있음. 이것은 port를 재사용
+* 그래서 port를 재사용하기 위한 endpoint-dependent mapping(EDM) table과 endpoint-independent mapping(EIM) table이 있음.
 
 
 
-##### 1.3 NAT에서의 P2P 지원
+##### 1.3.4 NAT에서의 P2P 지원
 
+* 그럼 EIM, EDM을 사용해서 port 재사용하면 좋은 것 아니냐?
+* 역시나 항상 그런 것은 아니다.
 
+* p2p의 경우 peer가 서버 역할을 할 수가 없다. NAT 뒤에 숨어 있기 때문에. 그렇다면 peer 끼리 어떻게 연결할 것인가?
 
+##### 1.3.4.1 해결책
 
+1. static map 사용
+   * peer의 IP나 port 등 사전 설정이 필요. 즉, 사용자의 사전 지식이 필요하다. 
 
+2. relay host 사용
+   * 예로 skype가 relay host 역할. 대리 역할이라고 보면 됨.
+   * global IP를 가지는 relay host가 B에게 주기적으로 패킷을 보내 연결을 유지
+   * 그러다가 A가 B에게 전화하고 싶다고 skype 서버에 요청
+   * 그럼 skype 서버는 relay host에게 연결해보라며 말함. 
+   * 그럼 A는 replay host에게 요청.
+   * relay host는 B와 유지하고 있던 연결을 A와 연결시킴
+   * EIM, EDM 모두 사용 가능
 
-
-
-
-
-
+3. Hole puncturing
+   * skype가 미리 B의 port를 뚫어 놓다가 A가 요청이 오면 A에게 뚫어 놓은 B의 port 번호를 알려줌
+   * global IP를 가지는 서버와 내부의 client가 사전 연결을 가짐
+   * 각 NAT 라우터의 port 맵핑 테이블에 등록
+   * 노드가 연결을 시도할 때 해당 port를 알려줌
+   * 즉, EDM을 사용할 수 없음.
