--- a/_posts/major/database/2020-07-08-database-02.md
+++ b/_posts/major/database/2020-07-08-database-02.md
@@ -1,6 +1,6 @@
 ---
-title:  "정보 모델링(1)"
-excerpt: "정보 모델링(1)"
+title:  "정보 모델링"
+excerpt: "정보 모델링"
 classes: wide
 categories:
   - 데이터베이스
@@ -29,7 +29,7 @@ http://www.kocw.net/home/search/kemView.do?kemId=317898
 * 정보 시스템을 구축하는데 필요한 정보를 약속된 표기법에 의해 표현함으로써 시스템 구축 대상이 되는 업무 내용을 정확하게 분석하고자 함
 * 분석된 모델을 가지고 실제 데이터베이스를 생성하여 개발 및 관리에 이용하고자 함
 
-#### 
+
 
 ### 2. 핵심 요소
 
