--- a/_posts/codewars/2020-07-11-Codewars-122.md
+++ b/_posts/codewars/2020-07-11-Codewars-122.md
@@ -1,6 +1,6 @@
 ---
 title:  "CodeWars 일백 스물 두 번째 문제"
-excerpt: "How Much?"
+excerpt: "Diophantine Equation"
 classes: wide
 categories:
   - CodeWars
