--- a/_posts/java/2020-07-29-Java개념공부-01.md
+++ b/_posts/java/2020-07-29-Java개념공부-01.md
@@ -109,20 +109,20 @@ http://tcpschool.com/
 
   * Method Area (메소드, 클래스, 스태틱 영역)
 
-    * JVM이 읽어드린 클래스, 인터페이스에 대한 런타임 constant pool. static 메소드, 변수 저장
+    * 클래스에 대한 정보와 함께 클래스 변수가 저장되는 영역
 
-    * 상수풀은 클래스와 같은 Heap의 Permanent area(고정 영역)에 생성되어 Java 프로세스의 종료까지 그 생을 함께 합니다.
-
-      String을 new로 생성하지 않고 "" 리터럴을 사용하여 생성할경우, 내부적으로 new String() 메소드 호출 이후에String.intern()이라는 메소드가 호출되어 고유의 인스턴스를 공유하도록 interned됩니다. 이것은 생성한 String을 Constant pool에 등록하는(만약 이전에 같은 char sequence의 문자열이 이미 상수풀에 있다면 문자열을 힙에서 해제하고 그 상수풀의 레퍼런스를 반환) 작업을 수행하지요. 즉, 같은 패키지의 같은 클래스 내에서는 정수(literal) 스트링들은 동일한 String 객체를 참조한다.
+    * JVM은 자바 프로그램에서 특정 클래스가 사용되면 해당 클래스의 클래스 파일(*.class)를 읽어들여, 해당 클래스에 대한 정보를 메소드 영역에 저장
 
   * Heap area
 
-    * 인스턴스 객체 저장 공간
+    * 인스턴스 변수 저장 공간
+    * 낮은 주소에서 높은 주소의 방향으로 할당
 
   * stack area
 
     * 스레드가 시작될때마다 생성
     * 메소드 정보, 지역변수, 매개변수, 연산 중 발생하는 임시 데이터 저장
+    * 메모리의 높은 주소에서 낮은 주소의 방향으로 할당
 
   * program counter registers (PC 레지스터)
 
