--- a/_posts/java/2020-07-29-Java개념공부-05.md
+++ b/_posts/java/2020-07-29-Java개념공부-05.md
@@ -45,7 +45,7 @@ http://tcpschool.com/
 
 * 해당 객체의 public 메소드를 통해서만 접근이 가능. default, protected도 접근 불가능하면 public 메소드로 가능
 
-![](C:/Users/user/Desktop/자바/{{site.url}}/assets/images/private.png)
+![]({{site.url}}/assets/images/private.png)
 
 
 
@@ -53,7 +53,7 @@ http://tcpschool.com/
 
 * 같은 패키지 내의 클래스 또는 해당 클래스를 상속 받은 외부 패키지의 클래스에서 접근이 가능
 
-![](C:/Users/user/Desktop/자바/{{site.url}}/assets/images/protected.png)
+![]({{site.url}}/assets/images/protected.png)
 
 
 
@@ -63,7 +63,7 @@ http://tcpschool.com/
 
 * 같은 패키지 내에서만 접근이 가능하다.
 
-![](C:/Users/user/Desktop/자바/{{site.url}}/assets/images/default.png)
+![]({{site.url}}/assets/images/default.png)
 
 
 
@@ -71,7 +71,7 @@ http://tcpschool.com/
 
 * 그냥 다 쌉 가능
 
-![](C:/Users/user/Desktop/자바/{{site.url}}/assets/images/public.png)
+![]({{site.url}}/assets/images/public.png)
 
 
 
