데이터베이스

--- a/_posts/oracle/2020-04-13-db-01.md
+++ b/_posts/oracle/2020-04-13-db-01.md
@@ -3,9 +3,8 @@ title:  "오라클 Database 01"
 excerpt: "변수"
 classes: wide
 categories:
-  - database
+  - oracle
 tags:
-  - database
   - oracle
 last_modified_at: 2020-04-13
 ---
