--- a/_posts/oracle/2020-04-16-db-03.md
+++ b/_posts/oracle/2020-04-16-db-03.md
@@ -3,9 +3,8 @@ title:  "오라클 Database 03"
 excerpt: "SQL 기본 함수 정복하기-02"
 classes: wide
 categories:
-  - database
+  - oracle
 tags:
-  - database
   - oracle
 last_modified_at: 2020-04-16
 ---
