--- a/_posts/oracle/2020-04-17-db-04.md
+++ b/_posts/oracle/2020-04-17-db-04.md
@@ -3,9 +3,8 @@ title:  "오라클 Database 04"
 excerpt: "SQL 기본 함수 정복하기-03"
 classes: wide
 categories:
-  - database
+  - oracle
 tags:
-  - database
   - oracle
 last_modified_at: 2020-04-17
 ---
