--- a/_posts/java/2020-07-30-Java개념공부-13.md
+++ b/_posts/java/2020-07-30-Java개념공부-13.md
@@ -1,6 +1,6 @@
 ---
-title:  "스레드"
-excerpt: "스레드"
+title:  "JAVA8 람다"
+excerpt: "JAVA8 람다"
 classes: wide
 categories:
   - java
@@ -17,217 +17,192 @@ http://tcpschool.com/
 
 
 
-## 스래드의 개념
+## 람다 표현식
 
 
 
-### 1. 프로세스란?
+### 1. 람다 표현식(lambda expression)이란?
 
-* 프로세스란 실행 중인 프로그램
-* 사용자가 작성한 프로그램이 운영체제에 의해 메모리 공간을 할당받아 실행 중인 것
-* 이러한 프로세스는 프로그램에 사용되는 데이터와 메모리 등의 자원 그리고 스레드로 구성된다.
-
-
-
-### 2. 스레드란?
-
-* 스레드란 프로세스 내에서 실제로 작업을 수행하는 주체를 의미
-* 모든 프로세스는 한 개 이상의 스레가 존재하여 작업을 수행
-* 두 개 이상의 스레드를 가지는 프로세스를 멀티스레드 프로세스라고 한다.
-
-
-
-### 3. 스레드의 생성과 실행
-
-* 두 가지가 있음
-  1. Runnable 인터페이스를 구현하는 방법
-  2. Thread 클래스를 상속받는 방법
-* 두 방법 모두 스레드를 통해 작업하고 싶은 내용을 run() 메소드에 작성하면 된다.
-* Thread 클래스를 상속받으면 다른 클래스를 상속받을 수 없으므로, 일반적으로 Runnable 인터페이스를 구현하는 방법으로 스레드를 생성
-* Runnable 인터페이스는 몸체가 없는 메소드인 run() 메소드 단 하나만을 가지는 간단한 인터페이스
+* 람다 표현식(lambda expression)이란 간단히 말해 메소드를 하나의 식으로 표현한 것
+* 메서드
 
 ```java
-class ThreadWithClass extends Thread {
-    public void run() {
-        for (int i = 0; i < 5; i++) {
-            System.out.println(getName()); // 현재 실행 중인 스레드의 이름을 반환함.
-            
-            try {
-                Thread.sleep(10);          // 0.01초간 스레드를 멈춤.
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
-        }
-    }
-}
-
-class ThreadWithRunnable implements Runnable {
-
-    public void run() {
-
-        for (int i = 0; i < 5; i++) {
-            System.out.println(Thread.currentThread().getName()); 
-            // 현재 실행 중인 스레드의 이름을 반환함.
-
-            try {
-                Thread.sleep(10);
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
-        }
-    }
-}
-
-public class Thread01 {
-    public static void main(String[] args){
-
-        ThreadWithClass thread1 = new ThreadWithClass();       
-        // Thread 클래스를 상속받는 방법
-        Thread thread2 = new Thread(new ThreadWithRunnable()); 
-        // Runnable 인터페이스를 구현하는 방법
-
-        thread1.start(); // 스레드의 실행
-        thread2.start(); // 스레드의 실행
-    }
+int min(int x, int y) {
+    return x < y ? x : y;
 }
 ```
 
-
-
-### 4. 스레드의 우선순위
-
-* 자바에서 각 스레드는 우선순위(priority)에 관한 자신만의 필드를 가지고 있다.
-* 이러한 우선순위에 따라 특정 스레드가 더 많은 시간 동안 작업을 할 수 있도록 설정할 수 있다.
-
-|           필드           |                       설명                        |
-| :----------------------: | :-----------------------------------------------: |
-| static int MAX_PRIORITY  |   스레드가 가질 수 있는 최대 우선순위를 명시함.   |
-| static int MIN_PRIORITY  |   스레드가 가질 수 있는 최소 우선순위를 명시함.   |
-| static int NORM_PRIORITY | 스레드가 생성될 때 가지는 기본 우선순위를 명시함. |
-
-* getPriority()와 setPriority() 메소드를 통해 스레드의 우선순위를 반환하거나 변경할 수 있다.
-* 스레드의 우선순위가 가질 수 있는 범위는 1부터 10까지이며, 숫자가 높을수록 우선순위 또한 높아진다.
-* 하지만 스레드의 우선순위는 비례적인 절댓값이 아닌 어디까지나 상대적인 값일 뿐이다.
-* 단지 우선순위가 10인 스레드는 우선순위가 1인 스레드보다 좀 더 많이 실행 큐에 포함되어, 좀 더 많은 작업 시간을 할당받을 뿐이다.
-* 그리고 스레드의 우선순위는 해당 스레드를 생성한 스레드의 우선순위를 상속받게 된다.
+* 람다 표현식
 
 ```java
-class ThreadWithRunnable implements Runnable {
-    public void run() {
-        for (int i = 0; i < 5; i++) {
-            
-            System.out.println(Thread.currentThread().getName()); 
-            // 현재 실행 중인 스레드의 이름을 반환함.
-
-            try {
-                Thread.sleep(10);
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
-        }
-    }
-}
-
-public class Thread02 {
-
-    public static void main(String[] args){
-
-        Thread thread1 = new Thread(new ThreadWithRunnable());
-        Thread thread2 = new Thread(new ThreadWithRunnable());
-
-     	thread2.setPriority(10); // Thread-1의 우선순위를 10으로 변경함.
-
-      	thread1.start(); // Thread-0 실행
-      	thread2.start(); // Thread-1 실행
-
-        System.out.println(thread1.getPriority());
-        System.out.println(thread2.getPriority());
-    }
-}
+(x, y) -> x < y ? x : y;
 ```
 
+* 메소드를 람다 표현식으로 표현하면, 클래스를 작성하고 객체를 생성하지 않아도 메소드를 사용할 수 있다.
 
-
-## 멀티 스레드
-
-
-
-### 1. 멀티 스레드
-
-* 멀티 스레드(multi thread)란 하나의 프로세스 내에서 둘 이상의 스레드가 동시에 작업을 수행하는 것을 의미
-* 멀티 프로세스(multi process)는 여러 개의 CPU를 사용하여 여러 프로세스를 동시에 수행하는 것을 의미
-* 멀티 스레드와 멀티 프로세스 모두 여러 흐름을 동시에 수행하다는 공통점
-* 멀티 프로세스는 각 프로세스가 독립적인 메모리를 가지고 별도로 실행되지만, 멀티 스레드는 각 스레드가 자신이 속한 프로세스의 메모리를 공유한다는 점이 다르다.
-* 멀티 스레드는 각 스레드가 자신이 속한 프로세스의 메모리를 공유하므로, 시스템 자원의 낭비가 적다.
-* 또한, 하나의 스레드가 작업을 할 때 다른 스레드가 별도의 작업을 할 수 있어 사용자와의 응답성도 좋아진다.
+* 자바에서는 클래스의 선언과 동시에 객체를 생성하므로, 단 하나의 객체만을 생성할 수 있는 클래스를 익명 클래스라고 한다.
+* 따라서 자바에서 람다 표현식은 익명 클래스와 같다고 할 수 있다.
 
 
 
-### 2. 문맥 교환(context switching)
+### 2. 람다 표현식 작성
 
-* 컴퓨터에서 동시에 처리할 수 있는 최대 작업 수는 CPU의 코어(core) 수와 같다.
-* 만약 CPU의 코어 수보다 더 많은 스레드가 실행되면, 각 코어가 정해진 시간 동안 여러 작업을 번갈아가며 수행하게 된다.
-* 이때 각 스레드가 서로 교체될 때 스레드 간의 문맥 교환(context switching)이라는 것이 발생
-* 문맥 교환이란 현재까지의 작업 상태나 다음 작업에 필요한 각종 데이터를 저장하고 읽어오는 작업
-*  문맥 교환에 걸리는 시간이 커지면 커질수록, 멀티 스레딩의 효율은 저하
-* 오히려 많은 양의 단순한 계산은 싱글 스레드로 동작하는 것이 더 효율적일 수 있다.
-* 따라서 많은 수의 스레드를 실행하는 것이 언제나 좋은 성능을 보이는 것은 아니라는 점을 유의
-
-
-
-### 3. 스레드 그룹(thread group)
-
-* 스레드 그룹(thread group)이란 서로 관련이 있는 스레드를 하나의 그룹으로 묶어 다루기 위한 장치
-* 자바에서는 스레드 그룹을 다루기 위해 ThreadGroup이라는 클래스를 제공
-* 이러한 스레드 그룹은 다른 스레드 그룹을 포함할 수도 있으며, 이렇게 포함된 스레드 그룹은 트리 형태로 연결
-* 이때 스레드는 자신이 포함된 스레드 그룹이나 그 하위 그룹에는 접근할 수 있지만, 다른 그룹에는 접근할 수 없다.
-* 이렇게 스레드 그룹은 스레드가 접근할 수 있는 범위를 제한하는 보안상으로도 중요한 역할
+* 자바에서는 화살표(->) 기호를 사용하여 람다 표현식을 작성할 수 있다.
 
 ```java
-class ThreadWithRunnable implements Runnable {
+(매개변수목록) -> { 함수몸체 }
+```
+
+* 자바에서 람다 표현식을 작성할 때 유의해야 할 사항
+
+1. 매개변수의 타입을 추론할 수 있는 경우에는 타입을 생략할 수 있다.
+
+2. 매개변수가 하나인 경우에는 괄호(())를 생략할 수 있다.
+
+3. 함수의 몸체가 하나의 명령문만으로 이루어진 경우에는 중괄호({})를 생략할 수 있다. (이때 세미콜론(;)은 붙이지 않음)
+
+4. 함수의 몸체가 하나의 return 문으로만 이루어진 경우에는 중괄호({})를 생략할 수 없다.
+
+5. return 문 대신 표현식을 사용할 수 있으며, 이때 반환값은 표현식의 결괏값이 된다. (이때 세미콜론(;)은 붙이지 않음)
+
+```java
+new Thread(new Runnable() {
     public void run() {
-        try {
-            Thread.sleep(10); // 0.01초간 스레드를 멈춤.
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
+        System.out.println("전통적인 방식의 일회용 스레드 생성");
     }
-}
+}).start();
 
-public class Thread03 {
-    public static void main(String[] args){
-        Thread thread0 = new Thread(new ThreadWithRunnable());
+new Thread(()->{
+    System.out.println("람다 표현식을 사용한 일회용 스레드 생성");
+}).start();
 
-        thread0.start(); // Thread-0 실행
-
-        System.out.println(thread0.getThreadGroup());
-
-        ThreadGroup group = new ThreadGroup("myThread"); 
-        // myThread라는 스레드 그룹 생성함.
-
-        group.setMaxPriority(7); // 해당 스레드 그룹의 최대 우선순위를 7로 설정함.
-
-        // 스레드를 생성할 때 포함될 스레드 그룹을 전달할 수 있음.
-        
-        Thread thread1 = new Thread(group, new ThreadWithRunnable());
-        thread1.start(); // Thread-1 실행
-
-        System.out.println(thread1.getThreadGroup());
-    }
-}
 /*
-java.lang.ThreadGroup[name=main,maxpri=10]
-java.lang.ThreadGroup[name=myThread,maxpri=7]
+전통적인 방식의 일회용 스레드 생성
+람다 표현식을 사용한 일회용 스레드 생성
 */
 ```
 
 
 
-### 4. 데몬 스레드
+### 3. 함수형 인터페이스(functional interface)
 
-* 데몬 스레드(deamon thread)란 다른 일반 스레드의 작업을 돕는 보조적인 역할을 하는 스레드
-* 따라서 데몬 스레드는 일반 스레드가 모두 종료되면 더는 할 일이 없으므로, 데몬 스레드 역시 자동으로 종료
-* 데몬 스레드의 생성 방법과 실행 방법은 모두 일반 스레드와 같다.
-* 단, 실행하기 전에 setDaemon() 메소드를 호출하여 데몬 스레드로 설정하기만 하면 된다.
-* 이러한 데몬 스레드는 일정 시간마다 자동으로 수행되는 저장 및 화면 갱신 등에 이용
-* 대표적인 예로 가비지 컬렉터
+* 람다 표현식을 사용할 때는 람다 표현식을 저장하기 위한 참조 변수의 타입을 결정해야만 한다.
+
+```java
+참조변수의타입 참조변수의이름 = 람다 표현식
+```
+
+* 위의 문법처럼 람다 표현식을 하나의 변수에 대입할 때 사용하는 참조 변수의 타입을 함수형 인터페이스라고 부른다.
+
+* 함수형 인터페이스는 추상 클래스와는 달리 단 하나의 추상 메소드만을 가져야 한다.
+* 또한, 다음과 같은 어노테이션(annotation)을 사용하여 함수형 인터페이스임을 명시할 수 있다.
+
+```java
+@FunctionalInterface
+```
+
+* 위와 같은 어노테이션을 인터페이스의 선언 앞에 붙이면, 컴파일러는 해당 인터페이스를 함수형 인터페이스로 인식
+* 자바 컴파일러는 이렇게 명시된 함수형 인터페이스에 두 개 이상의 메소드가 선언되면 오류를 발생시킨다.
+
+```java
+@FunctionalInterface
+interface Calc { // 함수형 인터페이스의 선언
+    public int min(int x, int y);
+}
+
+public class Lambda02 {
+	public static void main(String[] args){
+        Calc minNum = (x, y) -> x < y ? x : y; // 추상 메소드의 구현
+        System.out.println(minNum.min(3, 4));  // 함수형 인터페이스의 사용
+    }
+}
+
+// 3
+```
+
+
+
+
+
+## 메소드 참조
+
+
+
+### 1. 메소드 참조
+
+* 메소드 참조는 람다 표현식이 단 하나의 메소드만을 호출하는 경우에 해당 람다 표현식에서 불필요한 매개변수를 제거하고 사용할 수 있도록 해준다.
+* 메소드 참조를 사용하면 불필요한 매개변수를 제거하고 다음과 같이 '::' 기호를 사용하여 표현할 수 있다.
+
+```java
+클래스이름::메소드이름
+또는
+참조변수이름::메소드이름
+```
+
+* 다음 예제는 두 개의 값을 전달받아 제곱 연산을 수행하는 Math 클래스의 클래스 메소드인 pow() 메소드를 호출하는 람다 표현식
+
+```java
+(base, exponent) -> Math.pow(base, exponent);
+```
+
+* 위의 예제는 단순히 Math 클래스의 pow() 메소드로 인수를 전달하는 역할
+* 메소드 참조를 사용하여 다음과 같이 간단히 표현할 수 있다.
+
+```java
+Math::pow;
+```
+
+* 또한, 특정 인스턴스의 메소드를 참조할 때에도 참조 변수의 이름을 통해 메소드 참조를 사용할 수 있다.
+
+```java
+MyClass obj = new MyClass;
+Function<String, Boolean> func = (a) -> obj.equals(a); // 람다 표현식
+Function<String, Boolean> func = obj::equals(a);       // 메소드 참조
+```
+
+* 람다 표현식과 메서드 참조 비교하는 예제
+
+```java
+DoubleUnaryOperator oper;
+
+oper = (n) -> Math.abs(n); // 람다 표현식
+
+System.out.println(oper.applyAsDouble(-5));
+
+oper = Math::abs; // 메소드 참조
+
+System.out.println(oper.applyAsDouble(-5));
+
+/*
+5.0
+5.0
+*/
+```
+
+* DoubleUnaryOperator 인터페이스는 한 개의 double 형 매개변수를 전달받아 한 개의 double 형 값을 반환하는 java.util.function 패키지에서 제공하는 함수형 인터페이스
+
+
+
+### 2. 생성자 참조
+
+* 생성자를 호출하는 람다 표현식도 앞서 살펴본 메소드 참조를 이용할 수 있다.
+* 즉, 단순히 객체를 생성하고 반환하는 람다 표현식은 생성자 참조로 변환할 수 있다.
+* 다음 예제는 단순히 객체를 생성하고 반환하는 람다 표현식
+
+```java
+(a) -> { return new Object(a); }
+```
+
+* 위의 예제는 단순히 Object 클래스의 인스턴스를 생성하고 반환하기만 하므로, 생성자 참조를 사용하여 다음과 같이 간단히 표현할 수 있다.
+
+```java
+Object::new;
+```
+
+* 이때 해당 생성자가 존재하지 않으면 컴파일 시 오류가 발생
+* 또한, 배열을 생성할 때에도 다음과 같이 생성자 참조를 사용할 수 있다.
+
+```java
+Function<Integer, double[]> func1 = a -> new double[a]; // 람다 표현식
+Function<Integer, double[]> func2 = double[]::new;      // 생성자 참조
+```
