--- a/_posts/java/2020-07-30-Java개념공부-12.md
+++ b/_posts/java/2020-07-30-Java개념공부-12.md
@@ -1,6 +1,6 @@
 ---
-title:  "스트림"
-excerpt: "스트림"
+title:  "스레드"
+excerpt: "스레드"
 classes: wide
 categories:
   - java
@@ -17,128 +17,217 @@ http://tcpschool.com/
 
 
 
-## 스트림
+## 스래드의 개념
 
 
 
-### 1. 스트림
+### 1. 프로세스란?
 
-* 자바에서는 파일이나 콘솔의 입출력을 직접 다루지 않고, 스트림(stream)이라는 흐름을 통해 다룬다.
-* 스트림이란 실제의 입력이나 출력이 표현된 데이터의 이상화된 흐름을 의미
-* 즉, 스트림은 운영체제에 의해 생성되는 가상의 연결 고리를 의미하며, 중간 매개자 역할
-
-* 자바 SE 8에 추가된 스트림 API와 다른 개념
+* 프로세스란 실행 중인 프로그램
+* 사용자가 작성한 프로그램이 운영체제에 의해 메모리 공간을 할당받아 실행 중인 것
+* 이러한 프로세스는 프로그램에 사용되는 데이터와 메모리 등의 자원 그리고 스레드로 구성된다.
 
 
 
-### 2. 입출력 스트림
+### 2. 스레드란?
 
-* 스트림은 한 방향으로만 통신할 수 있으므로, 입력과 출력을 동시에 처리할 수는 없다.
-* 따라서 입력 스트림, 출력 스트림으로 구분
-* 자바에서는 java.io 패키지를 통해 InputStream과 OutputStream 클래스를 별도로 제공
-* 자바에서의 스트림 생성이란 이러한 스트림 클래스 타입의 인스턴스를 생성한다는 의미
-
-* InputStream 클래스에는 read() 메소드가, OutputStream 클래스에는 write() 메소드가 각각 추상 메소드로 포함
-
-| 클래스       | 메소드                                 | 설명                                                         |
-| ------------ | -------------------------------------- | ------------------------------------------------------------ |
-| InputStream  | abstract int read()                    | 입력 스트림으로부터 다음 바이트를 읽어들임.                  |
-|              | int read(byte[] b)                     | 입력 스트림으로부터 특정 바이트를 읽어들인 후, <br> 배열 b에 저장함. |
-|              | int read(byte[] b, int off, int len)   | 입력 스트림으로부터 len 바이트를 읽어들인 후, <br> 배열 b[off]부터 저장함. |
-| OutputStream | abstract void write(int b)             | 출력 스트림에 특정 바이트를 저장함.                          |
-|              | void write(byte[] b)                   | 배열 b의 특정 바이트를 배열 b의 길이만큼 출력 스트림에 저장함. |
-|              | void write(byte[] b, int off, int len) | 배열 b[off]부터 len 바이트를 출력 스트림에 저장함.           |
+* 스레드란 프로세스 내에서 실제로 작업을 수행하는 주체를 의미
+* 모든 프로세스는 한 개 이상의 스레가 존재하여 작업을 수행
+* 두 개 이상의 스레드를 가지는 프로세스를 멀티스레드 프로세스라고 한다.
 
 
 
-### 3. 바이트 기반 스트림
+### 3. 스레드의 생성과 실행
 
-* 자바에서 스트림은 기본적으로 바이트 단위로 데이터를 전송
+* 두 가지가 있음
+  1. Runnable 인터페이스를 구현하는 방법
+  2. Thread 클래스를 상속받는 방법
+* 두 방법 모두 스레드를 통해 작업하고 싶은 내용을 run() 메소드에 작성하면 된다.
+* Thread 클래스를 상속받으면 다른 클래스를 상속받을 수 없으므로, 일반적으로 Runnable 인터페이스를 구현하는 방법으로 스레드를 생성
+* Runnable 인터페이스는 몸체가 없는 메소드인 run() 메소드 단 하나만을 가지는 간단한 인터페이스
 
-|     입력 스트림      |      출력 스트림      | 입출력 대상 |
-| :------------------: | :-------------------: | :---------: |
-|   FileInputStream    |   FileOutputStream    |    파일     |
-| ByteArrayInputStream | ByteArrayOutputStream |   메모리    |
-|   PipedInputStream   |   PipedOutputStream   |  프로세스   |
-|   AudioInputStream   |   AudioOutputStream   | 오디오 장치 |
+```java
+class ThreadWithClass extends Thread {
+    public void run() {
+        for (int i = 0; i < 5; i++) {
+            System.out.println(getName()); // 현재 실행 중인 스레드의 이름을 반환함.
+            
+            try {
+                Thread.sleep(10);          // 0.01초간 스레드를 멈춤.
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
 
+class ThreadWithRunnable implements Runnable {
 
+    public void run() {
 
-### 4. 보조 스트림
+        for (int i = 0; i < 5; i++) {
+            System.out.println(Thread.currentThread().getName()); 
+            // 현재 실행 중인 스레드의 이름을 반환함.
 
-* 자바에서 제공하는 보조 스트림은 실제로 데이터를 주고받을 수는 없지만, 다른 스트림의 기능을 향상시키거나 새로운 기능을 추가해 주는 스트림
+            try {
+                Thread.sleep(10);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
 
-|     입력 스트림     |     출력 스트림      |                             설명                             |
-| :-----------------: | :------------------: | :----------------------------------------------------------: |
-|  FilterInputStream  |  FilterOutputStream  |                     필터를 이용한 입출력                     |
-| BufferedInputStream | BufferedOutputStream |                     버퍼를 이용한 입출력                     |
-|   DataInputStream   |   DataOutputStream   | 입출력 스트림으로부터 자바의 기본 타입으로 데이터를 읽어올 수 있게 함. |
-|  ObjectInputStream  |  ObjectOutputStream  | 데이터를 객체 단위로 읽거나, 읽어 들인 객체를 역직렬화시킴.  |
-| SequenceInputStream |          X           |           두 개의 입력 스트림을 논리적으로 연결함.           |
-| PushbackInputStream |          X           | 다른 입력 스트림에 버퍼를 이용하여 push back이나 unread와 같은 기능을 추가함. |
-|          X          |     PrintStream      | 다른 출력 스트림에 버퍼를 이용하여 다양한 데이터를 출력하기 위한 기능을 추가함. |
+public class Thread01 {
+    public static void main(String[] args){
 
+        ThreadWithClass thread1 = new ThreadWithClass();       
+        // Thread 클래스를 상속받는 방법
+        Thread thread2 = new Thread(new ThreadWithRunnable()); 
+        // Runnable 인터페이스를 구현하는 방법
 
-
-### 5. 문자 기반 스트림
-
-* 자바에서 스트림은 기본적으로 바이트 단위로 데이터를 전송
-* 하지만 자바에서 가장 작은 타입인 char 형이 2바이트이므로, 1바이트씩 전송되는 바이트 기반 스트림으로는 원활한 처리가 힘든 경우가 있다.
-* 따라서 자바에서는 바이트 기반 스트림뿐만 아니라 문자 기반의 스트림도 별도로 제공
-* 이러한 문자 기반 스트림은 기존의 바이트 기반 스트림에서 InputStream을 Reader로, OutputStream을 Writer로 변경하면 사용할 수 있다.
-
-|   입력 스트림   |   출력 스트림   | 입출력 대상 |
-| :-------------: | :-------------: | :---------: |
-|   FileReader    |   FileWriter    |    파일     |
-| CharArrayReader | CharArrayWriter |   메모리    |
-|   PipedReader   |   PipedWriter   |  프로세스   |
-|  StringReader   |  StringWriter   |   문자열    |
-
-* 문자 기반 보조 스트림
-
-|  입력 스트림   |  출력 스트림   |                             설명                             |
-| :------------: | :------------: | :----------------------------------------------------------: |
-|  FilterReader  |  FilterWriter  |                     필터를 이용한 입출력                     |
-| BufferedReader | BufferedWriter |                     버퍼를 이용한 입출력                     |
-| PushbackReader |       X        | 다른 입력 스트림에 버퍼를 이용하여 push back이나 unread와 같은 기능을 추가함. |
-|       X        |  PrintWriter   | 다른 출력 스트림에 버퍼를 이용하여 다양한 데이터를 출력하기 위한 기능을 추가함. |
-
-
-
-
-
-## 파일 입출력
+        thread1.start(); // 스레드의 실행
+        thread2.start(); // 스레드의 실행
+    }
+}
+```
 
 
 
-### 1. 표준 입출력
+### 4. 스레드의 우선순위
 
-* 자바에서는 콘솔과 같은 표준 입출력 장치를 위해 System이라는 표준 입출력 클래스를 정의
+* 자바에서 각 스레드는 우선순위(priority)에 관한 자신만의 필드를 가지고 있다.
+* 이러한 우선순위에 따라 특정 스레드가 더 많은 시간 동안 작업을 할 수 있도록 설정할 수 있다.
 
-| 클래스 변수 | 입출력 스트림 |             설명              |
-| :---------: | :-----------: | :---------------------------: |
-|  System.in  |  InputStream  | 콘솔로부터 데이터를 입력받음. |
-| System.out  |  PrintStream  |    콘솔로 데이터를 출력함.    |
-| System.err  |  PrintStream  |    콘솔로 데이터를 출력함.    |
+|           필드           |                       설명                        |
+| :----------------------: | :-----------------------------------------------: |
+| static int MAX_PRIORITY  |   스레드가 가질 수 있는 최대 우선순위를 명시함.   |
+| static int MIN_PRIORITY  |   스레드가 가질 수 있는 최소 우선순위를 명시함.   |
+| static int NORM_PRIORITY | 스레드가 생성될 때 가지는 기본 우선순위를 명시함. |
+
+* getPriority()와 setPriority() 메소드를 통해 스레드의 우선순위를 반환하거나 변경할 수 있다.
+* 스레드의 우선순위가 가질 수 있는 범위는 1부터 10까지이며, 숫자가 높을수록 우선순위 또한 높아진다.
+* 하지만 스레드의 우선순위는 비례적인 절댓값이 아닌 어디까지나 상대적인 값일 뿐이다.
+* 단지 우선순위가 10인 스레드는 우선순위가 1인 스레드보다 좀 더 많이 실행 큐에 포함되어, 좀 더 많은 작업 시간을 할당받을 뿐이다.
+* 그리고 스레드의 우선순위는 해당 스레드를 생성한 스레드의 우선순위를 상속받게 된다.
+
+```java
+class ThreadWithRunnable implements Runnable {
+    public void run() {
+        for (int i = 0; i < 5; i++) {
+            
+            System.out.println(Thread.currentThread().getName()); 
+            // 현재 실행 중인 스레드의 이름을 반환함.
+
+            try {
+                Thread.sleep(10);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+
+public class Thread02 {
+
+    public static void main(String[] args){
+
+        Thread thread1 = new Thread(new ThreadWithRunnable());
+        Thread thread2 = new Thread(new ThreadWithRunnable());
+
+     	thread2.setPriority(10); // Thread-1의 우선순위를 10으로 변경함.
+
+      	thread1.start(); // Thread-0 실행
+      	thread2.start(); // Thread-1 실행
+
+        System.out.println(thread1.getPriority());
+        System.out.println(thread2.getPriority());
+    }
+}
+```
 
 
 
-### 2. File 클래스
+## 멀티 스레드
 
-* 자바는 이러한 입출력 작업 이외의 파일과 디렉터리에 관한 작업을 File 클래스를 통해 처리
 
-|                            메소드                            |                             설명                             |
-| :----------------------------------------------------------: | :----------------------------------------------------------: |
-|                      boolean canRead()                       |         해당 파일이 읽을 수 있는 파일인지를 검사함.          |
-|                      boolean canWrite()                      |          해당 파일이 쓸 수 있는 파일인지를 검사함.           |
-|                       boolean delete()                       |              해당 파일 또는 디렉터리를 삭제함.               |
-|                       boolean exists()                       |               해당 파일이 존재하는지를 검사함.               |
-|                       String getPath()                       |            해당 파일의 경로명을 문자열로 반환함.             |
-|                     boolean isAbsolute()                     |         해당 파일의 경로명이 절대 경로인지를 검사함.         |
-|                    boolean isDirectory()                     |              해당 파일이 디렉터리인지를 검사함.              |
-|                       boolean isFile()                       |                해당 파일이 파일인지를 검사함.                |
-|                        long length()                         |                  해당 파일의 크기를 반환함.                  |
-|                       boolean mkdir()                        |               지정된 경로에 디렉터리를 생성함.               |
-|                       boolean mkdirs()                       | 지정된 경로에 디렉터리를 생성하며, <br>필요한 모든 상위 디렉터리도 생성함. |
-|                 boolean renameTo(File dest)                  |       해당 파일의 이름을 전달된 파일 이름으로 변경함.        |
-| boolean setExecutable(boolean executable)<br>boolean setReadable(boolean readable)<br>boolean setWritable(boolean writable)<br>boolean setReadOnly() |                  해당 파일의 속성을 변경함.                  |
+
+### 1. 멀티 스레드
+
+* 멀티 스레드(multi thread)란 하나의 프로세스 내에서 둘 이상의 스레드가 동시에 작업을 수행하는 것을 의미
+* 멀티 프로세스(multi process)는 여러 개의 CPU를 사용하여 여러 프로세스를 동시에 수행하는 것을 의미
+* 멀티 스레드와 멀티 프로세스 모두 여러 흐름을 동시에 수행하다는 공통점
+* 멀티 프로세스는 각 프로세스가 독립적인 메모리를 가지고 별도로 실행되지만, 멀티 스레드는 각 스레드가 자신이 속한 프로세스의 메모리를 공유한다는 점이 다르다.
+* 멀티 스레드는 각 스레드가 자신이 속한 프로세스의 메모리를 공유하므로, 시스템 자원의 낭비가 적다.
+* 또한, 하나의 스레드가 작업을 할 때 다른 스레드가 별도의 작업을 할 수 있어 사용자와의 응답성도 좋아진다.
+
+
+
+### 2. 문맥 교환(context switching)
+
+* 컴퓨터에서 동시에 처리할 수 있는 최대 작업 수는 CPU의 코어(core) 수와 같다.
+* 만약 CPU의 코어 수보다 더 많은 스레드가 실행되면, 각 코어가 정해진 시간 동안 여러 작업을 번갈아가며 수행하게 된다.
+* 이때 각 스레드가 서로 교체될 때 스레드 간의 문맥 교환(context switching)이라는 것이 발생
+* 문맥 교환이란 현재까지의 작업 상태나 다음 작업에 필요한 각종 데이터를 저장하고 읽어오는 작업
+*  문맥 교환에 걸리는 시간이 커지면 커질수록, 멀티 스레딩의 효율은 저하
+* 오히려 많은 양의 단순한 계산은 싱글 스레드로 동작하는 것이 더 효율적일 수 있다.
+* 따라서 많은 수의 스레드를 실행하는 것이 언제나 좋은 성능을 보이는 것은 아니라는 점을 유의
+
+
+
+### 3. 스레드 그룹(thread group)
+
+* 스레드 그룹(thread group)이란 서로 관련이 있는 스레드를 하나의 그룹으로 묶어 다루기 위한 장치
+* 자바에서는 스레드 그룹을 다루기 위해 ThreadGroup이라는 클래스를 제공
+* 이러한 스레드 그룹은 다른 스레드 그룹을 포함할 수도 있으며, 이렇게 포함된 스레드 그룹은 트리 형태로 연결
+* 이때 스레드는 자신이 포함된 스레드 그룹이나 그 하위 그룹에는 접근할 수 있지만, 다른 그룹에는 접근할 수 없다.
+* 이렇게 스레드 그룹은 스레드가 접근할 수 있는 범위를 제한하는 보안상으로도 중요한 역할
+
+```java
+class ThreadWithRunnable implements Runnable {
+    public void run() {
+        try {
+            Thread.sleep(10); // 0.01초간 스레드를 멈춤.
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+
+public class Thread03 {
+    public static void main(String[] args){
+        Thread thread0 = new Thread(new ThreadWithRunnable());
+
+        thread0.start(); // Thread-0 실행
+
+        System.out.println(thread0.getThreadGroup());
+
+        ThreadGroup group = new ThreadGroup("myThread"); 
+        // myThread라는 스레드 그룹 생성함.
+
+        group.setMaxPriority(7); // 해당 스레드 그룹의 최대 우선순위를 7로 설정함.
+
+        // 스레드를 생성할 때 포함될 스레드 그룹을 전달할 수 있음.
+        
+        Thread thread1 = new Thread(group, new ThreadWithRunnable());
+        thread1.start(); // Thread-1 실행
+
+        System.out.println(thread1.getThreadGroup());
+    }
+}
+/*
+java.lang.ThreadGroup[name=main,maxpri=10]
+java.lang.ThreadGroup[name=myThread,maxpri=7]
+*/
+```
+
+
+
+### 4. 데몬 스레드
+
+* 데몬 스레드(deamon thread)란 다른 일반 스레드의 작업을 돕는 보조적인 역할을 하는 스레드
+* 따라서 데몬 스레드는 일반 스레드가 모두 종료되면 더는 할 일이 없으므로, 데몬 스레드 역시 자동으로 종료
+* 데몬 스레드의 생성 방법과 실행 방법은 모두 일반 스레드와 같다.
+* 단, 실행하기 전에 setDaemon() 메소드를 호출하여 데몬 스레드로 설정하기만 하면 된다.
+* 이러한 데몬 스레드는 일정 시간마다 자동으로 수행되는 저장 및 화면 갱신 등에 이용
+* 대표적인 예로 가비지 컬렉터
